# sologger

./: .gitignore  Dockerfile-logstash  Dockerfile-otel
docs/: index.html
docs/assets/: main-DBber4vZ.css  main-rMCEDyMX.js
docs/sologger-log-transformer-wasm/pkg/: sologger_log_transformer_wasm_bg.wasm.d.ts
sologger/: Cargo.toml
sologger-log-context/: Cargo.toml
sologger-log-context/benches/: log_context_benchmarks.rs
sologger-log-context/src/: lib.rs  programs_selector.rs  sologger_log_context.rs
sologger-log-transformer/: Cargo.toml
sologger-log-transformer-wasm/: Cargo.toml
sologger-log-transformer-wasm/src/: lib.rs  log_context_transformer_wasm.rs
sologger-log-transformer/benches/: log_context_transformer_benchmarks.rs
sologger-log-transformer/src/: log_context_transformer.rs
sologger-log-transport/: Cargo.toml
sologger-log-transport/src/: opentelemetry_lib.rs
sologger-log-transport/tests/: logstash_lib_tests.rs  opentelemetry_lib_tests.rs
sologger-ui/: package-lock.json  package.json
sologger-ui/public/sologger-log-transformer-wasm/pkg/: package.json  sologger_log_transformer_wasm.d.ts  sologger_log_transformer_wasm.js  sologger_log_transformer_wasm_bg.js  sologger_log_transformer_wasm_bg.wasm
sologger/src/: lib.rs  log_processor.rs  logger_lib.rs  main.rs  solana_client_subscriber.rs
sologger/tests/: logger_lib_test.rs
wasm-example/parseable-winston-example/: package-lock.json
