[package]
name = "sologger_log_transformer"
version = "0.2.5"
edition = "2021"
authors = ["Will Kennedy"]
description = "Provides utility to extract logs from various Solana API structs, such as blocks, transactions and responses."
license = "Apache-2.0"
repository = "https://github.com/brytelands/sologger"
readme = "README.md"
keywords = ["solana", "logging", "json", "parsing"]
categories = ["development-tools::debugging"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
solana-rpc-client = "3.1"
solana-rpc-client-api = "3.1"
solana-transaction-status = "3.1"
solana-sdk = "3.0"
sologger_log_context = "0.2.4"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "log_context_transformer_benchmarks"
harness = false